k8s/indexer/graph-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-node
spec:
  selector:
    matchLabels:
      name: graph-node
  template:
    metadata:
      labels:
        name: graph-node
    spec:
      containers:
        - name: graph-node
          image: graphprotocol/graph-node
          resources:
            limits:
              memory: "327Mi"
              cpu: "200m"
          ports:
            - containerPort: 8000
            - containerPort: 8001
            - containerPort: 8020
            - containerPort: 8030
            - containerPort: 8040
---
apiVersion: v1
kind: Service
metadata:
  name: graph-service
spec:
  type: NodePort
  selector:
    name: graph-node
  ports:
    - name: "rpc"
      port: 8020
      targetPort: 8020
    - name: "http-query"
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-postgres
spec:
  selector:
    matchLabels:
      app: graph-postgres
  template:
    metadata:
      labels:
        app: graph-postgres
    spec:
      containers:
        - name: graph-postgres
          image: postgres
          resources:
            limits:
              memory: "328Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-pv-storage
      volumes:
        - name: postgres-pv-storage
          persistentVolumeClaim:
            claimName: indexer-postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-graph-service
spec:
  selector:
    app: graph-postgres
  ports:
    - port: 5432
      targetPort: 5432
